--- a/ocaml/dune
+++ b/ocaml/dune
@@ -7,5 +7,8 @@
          day6
          day7
          day8
-         day9)
+         day9
+         day10)
+  (libraries glpk ppx_deriving.show)
+  (preprocess (pps ppx_deriving.show))
   (flags (:standard -w -32)))
