--- a/ocaml/dune
+++ b/ocaml/dune
@@ -9,7 +9,8 @@
          day8
          day9
          day10
-         day11)
+         day11
+         day12)
   (libraries glpk ppx_deriving.show)
   (preprocess (pps ppx_deriving.show))
   (flags (:standard -w -32)))
